question2/k8s-manifest/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: asiayo
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
